--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+@font-face {
+    font-family: 'DM Serif Display';
+    src: url('D:\Eby Projects\blog-shop\blogshop\src\assets\DMSerifDisplay-Regular.ttf') format('ttf');
+         
+    
+  }
+
+  @font-face {
+    font-family: 'Source Code Pro';
+    src: url('D:\Eby Projects\blog-shop\blogshop\src\assets\SourceCodePro-VariableFont_wght.ttf') format('ttf'),
+
+    
+  }
